--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+main{
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px 5px 5px 5px;
+  border: 0px solid #000000;
+  box-shadow: 0px 7px 19px 4px rgba(0,0,0,0.75);
+  width: 35%;
+  font-family: 'Raleway', sans-serif;
+}
+
+#clear-btn{
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 15px;
+  padding-left: 15px;
+  font-size: 20px;
   color: white;
+  background-color: rgb(73, 171, 209);
+  cursor: pointer;
+  border-radius: 2px 2px 2px 2px;
+  border: 0px solid #000000;
+  width: auto;
 }
 
-.App-link {
-  color: #61dafb;
+#clear-btn:focus{
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 1150px){
+  .container{
+    width: 60%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media screen and (max-width: 576px){
+  .container{
+    width: 80%;
   }
 }
